--- a/crazyflie_driver/CMakeLists.txt
+++ b/crazyflie_driver/CMakeLists.txt
@@ -52,6 +52,7 @@ add_message_files(
   crtpPacket.msg
   Hover.msg
   Position.msg
+  FlightState.msg
 )
 
 ## Generate added messages and services with any dependencies listed here
